--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chic-ai",
+  "name": "kag-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -32,6 +32,7 @@
     "groq-sdk": "^0.13.0",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
